# Game

./: .clang-format  .gersemirc  CMakeLists.txt
cmake/: StandardSettings.cmake
include/: game.hpp  sounds.hpp  utils.hpp
include/entities/: ball.hpp  entity.hpp  paddles.hpp
include/scenes/: mode_selection.hpp  play.hpp  scenes.hpp  start.hpp
src/: game.cpp  main.cpp  sounds.cpp
src/entities/: ball.cpp  paddle.cpp  paddles.cpp
src/scenes/: mode_selection.cpp  play.cpp  start.cpp
